Update chm db name; Add rwl_db

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -204,7 +204,12 @@ add_compile_definitions(HDRMEASUREMENT)
 add_dependencies(ycsb hdr_histogram_static)
 target_link_libraries(ycsb PRIVATE hdr_histogram_static)
 
-add_library(ojdkchm STATIC openjdk_concurrent_hash_map/openjdk_concurrent_hash_map.cpp)
-target_include_directories(ojdkchm PUBLIC ${PROJECT_SOURCE_DIR})
-target_include_directories(ojdkchm PUBLIC kvstore/include)
-target_link_libraries(ycsb PRIVATE ojdkchm)
+add_library(ojdkchm_db STATIC ojdkchm_db/ojdkchm_db.cpp)
+target_include_directories(ojdkchm_db PUBLIC ${PROJECT_SOURCE_DIR})
+target_include_directories(ojdkchm_db PUBLIC kvstore/include)
+target_link_libraries(ycsb PRIVATE ojdkchm_db)
+
+add_library(rwl_db STATIC rwl_db/rwl_db.cpp)
+target_include_directories(rwl_db PUBLIC ${PROJECT_SOURCE_DIR})
+target_include_directories(rwl_db PUBLIC kvstore/include)
+target_link_libraries(ycsb PRIVATE rwl_db)
