--- a/scripts/pyproject.toml
+++ b/scripts/pyproject.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 description = "Benchmarking scripts for kvstore data collection."
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "matplotlib>=3.10.7",
+    "numpy>=2.3.5",
+    "pandas>=2.3.3",
+]
