--- a/scripts/justfile
+++ b/scripts/justfile
@@ -2,6 +2,6 @@ default:
 	just --list
 
 all:
-	uv run benchmark.py --db ojdkchm_db gsm_db gsm_diom_db gsm_ii_db gsm_diom_ii_db rwl_db --workload a b c d f --max 6 --trials 5
+	uv run benchmark.py --db ojdkchm_db gsm_db gsm_diom_db gsm_ii_db gsm_diom_ii_db rwl_db --workload a b c d --max 6 --trials 5
 	uv run collect_stats.py
 	uv run graph.py
